<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.barcodescannerandsheetexport.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_rooms"
            app:destination="@id/roomsFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/roomsFragment"
        android:name="com.example.barcodescannerandsheetexport.RoomsFragment"
        android:label="@string/rooms_label"
        tools:layout="@layout/fragment_rooms">
        <action
            android:id="@+id/action_rooms_to_detail"
            app:destination="@id/roomDetailFragment" />
        <action
            android:id="@+id/action_rooms_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/roomDetailFragment"
        android:name="com.example.barcodescannerandsheetexport.RoomDetailFragment"
        android:label="{roomName}"
        tools:layout="@layout/fragment_room_detail">
        <argument
            android:name="roomId"
            app:argType="string" />
        <argument
            android:name="roomName"
            app:argType="string" />
    </fragment>

    <!-- Legacy template fragments kept to avoid compile errors -->
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.barcodescannerandsheetexport.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.barcodescannerandsheetexport.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.barcodescannerandsheetexport.DashboardFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_dashboard" />

</navigation>